<resources>
    <string name="app_name">Team N App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference headers -->
    <string name="notifications_header">Notifications</string>
    <string name="settings_header">Settings</string>
    <string name="location_header">Location</string>

    <!-- Preferences titles-->
    <string name="signature_title">Your signature</string>
    <string name="notifications_title">Notifications</string>
    <string name="Alerts_title">Save alerts</string>
    <string name="notifications_title2">Notification type</string>
    <string name="distance_title">Distance </string>
    <string name="location_title">Location</string>

    <!-- General -->
    <string name="distance_summary_off">Distance: 0.2 miles in radius</string>
    <string name="distance_summary_on">Distance: 1.0 miles in radius</string>
    <string name="alertsSaver_summary_off">Save Alerts: off</string>
    <string name="alertsSaver_summary_on">Save Alerts: on</string>

    <!-- Notifications -->
    <string name="notification_summary_off">Notifications: off</string>
    <string name="notification_summary_on">Notifications: on</string>

    <!-- Location Preference -->
    <string name="location_summary_off">Location services: off</string>
    <string name="location_summary_on">Location services: on </string>


    <!-- VCU Emergency Numbers info -->
    <string name="emergency_phone_numbers">EMERGENCY PHONE NUMBERS</string>
    <string name="on_campus_emergency">On-Campus Emergency</string>
    <string name="off_campus_emergency">Off-Campus Emergency</string>
    <string name="vcu_police_department_non_emergency">VCU Police Department (Non-Emergency)</string>
    <string name="richmond_police_department_non_emergency">Richmond Police Department (Non-Emergency)</string>
    <string name="ramsafe_escort_service">RamSafe Escort Service</string>
    <string name="_24_hour_student_counseling_services">24 Hour Student Counseling Services</string>
    <string name="_804_828_1234">(804) 828-1234</string>
    <string name="_911">911</string>
    <string name="_804_828_1196">(804) 828-1196</string>
    <string name="_804_646_5100">(804) 646-5100</string>
    <string name="_804_828_safe_7233">(804) 828-SAFE (7233)</string>
    <string name="_804_828_6200">(804) 828-6200</string>
    <string name="about_us">About US</string>
    <string name="support">Support</string>

    <string name="title_activity_display_alert">Map</string>
    <string name="vcu_police">VCU Police</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Chip group -->
    <string name="tornado">Tornado</string>
    <string name="fire">Fire</string>
    <string name="snow_ice_storms">Snow/Ice Storms</string>
    <string name="earthquake">Earthquake</string>
    <string name="lightening_and_thunderstorms">Lightening and Thunderstorms</string>
    <string name="vcu_phone_numbers">VCU Phone Numbers</string>
    <string name="alerts">Alerts</string>
    <string name="location">Location</string>
    <string name="title_activity_chip_group">ChipGroup</string>
    <string name="page_title">page_title</string>
    <string name="more">More</string>
    <string name="content_description_more">This is where we will place our \"more\" section</string>
    <string name="hazardous_material_release">Hazardous Material Release</string>
    <string name="alert_types">Alert Types:</string>
    <string name="civil_disturbance">Civil Disturbance</string>
    <string name="medical_emergency">Medical Emergency</string>
    <string name="suspicious_person">Suspicious Person</string>
    <string name="active_shooter">Active Shooter</string>
    <string name="crime_in_progress">Crime in Progress</string>

    <string name="resources_for_your_safety">RESOURCES FOR YOUR SAFETY</string>

    <string name="button">Button</string>
    <string name="close_menu">Close Menu</string>
    <string name="_804_828_7233">(804) 828-7233</string>
    <string name="vcu_ram_alerts" />
    <string name="rodneyram_vcu_edu" />
    <string name="choose_the_list_of_alerts_you_would_like_to_display">Choose the list of alerts you would like to display:</string>

    <string name="google_maps_key">AIzaSyAl-RZHT5WG66Ghz_wcL79U185LaSFJM74</string>
</resources>