<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/ShapeAppearance.MaterialComponents.SmallComponent"
    android:layout_height="match_parent"
    tools:context=".ChipGroup">




    <com.google.android.material.chip.ChipGroup
        android:layout_width="370dp"
        android:layout_height="257dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="441dp"
        app:chipSpacingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightening_and_thunderstorms" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earthquake" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snow_ice_storms" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tornado" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hazardous_material_release" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civil_disturbance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_emergency" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspicious_person" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_shooter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crime_in_progress" />
    </com.google.android.material.chip.ChipGroup>
    />

</androidx.constraintlayout.widget.ConstraintLayout>