<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/vcu_phone_numbers" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/location" />
        <item
            android:icon="@android:drawable/ic_menu_manage"
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:onClick="openSettingsActivity"
            app:showAsAction="never" />
    </group>
</menu>